[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Textures/UI/SelectionFrame.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/StoreSkillPanel.gd" type="Script" id=4]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=5]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection2.wav" type="AudioStream" id=6]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 200, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="StoreSkillPanel" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 7.49999, -47.5 )
scale = Vector2( 1.6275, 0.7225 )
texture = ExtResource( 5 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( -54.5, -6 )
scale = Vector2( 0.7825, 0.15 )
texture = ExtResource( 5 )
energy = 2.5

[node name="DecreaseParticles" type="Particles2D" parent="."]
position = Vector2( -176, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 0.96
local_coords = false
draw_order = 1
process_material = SubResource( 13 )

[node name="IncreaseParticles" type="Particles2D" parent="."]
position = Vector2( 51, -1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 0.96
local_coords = false
draw_order = 1
process_material = SubResource( 13 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 5, -21 )
process_material = SubResource( 7 )

[node name="Frames" type="Node2D" parent="."]

[node name="SelectionFrame" type="Sprite" parent="Frames"]
position = Vector2( -56, -66.285 )
scale = Vector2( 3.00935, 3.6715 )
texture = ExtResource( 3 )

[node name="SelectionFrame3" type="Sprite" parent="Frames"]
position = Vector2( -58, -5 )
scale = Vector2( 3, 2.843 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
margin_left = -239.0
margin_top = -141.0
margin_right = 242.0
margin_bottom = -106.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Price" type="Label" parent="."]
margin_left = -203.0
margin_top = -75.0
margin_right = -74.0
margin_bottom = -38.0
custom_fonts/font = SubResource( 3 )
text = "Price: 
"

[node name="Current" type="Label" parent="."]
margin_left = 112.0
margin_top = -59.0
margin_right = 299.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 4 )
text = "Current: 
"

[node name="Next" type="Label" parent="."]
margin_left = 113.0
margin_top = -21.0
margin_right = 242.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Next: 
"

[node name="Last" type="Label" parent="."]
margin_left = 112.0
margin_top = -96.0
margin_right = 241.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 4 )
text = "Last: 
"

[node name="BuyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.48
script = ExtResource( 1 )

[node name="ApplyMore" type="Button" parent="."]
margin_left = 32.2
margin_top = -23.0
margin_right = 75.2
margin_bottom = 13.0
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
shortcut_in_tooltip = false
text = ">"
flat = true

[node name="ApplyLess" type="Button" parent="."]
margin_left = -195.0
margin_top = -23.0
margin_right = -152.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
shortcut_in_tooltip = false
text = "<"
flat = true

[connection signal="pressed" from="ApplyMore" to="." method="_on_ApplyMore_pressed"]
[connection signal="pressed" from="ApplyLess" to="." method="_on_ApplyLess_pressed"]
